--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,8 +39,7 @@ jobs:
 
     - name: Run non-interactive build
       run: |
-        chmod +x ./scripts/run.sh
-        ./scripts/run.sh \
+        chmod +x ./scripts/run.sh \
           --arch x64 \
           --release-type retail \
           --magisk-ver stable \
